[tool.poetry]
name = "Filtration_Curves"
version = "0.1.0"
description = ""
authors = ["Leslie O'Bray <leslie.obray@bsse.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
numpy = "^1.19.4"
tqdm = "^4.52.0"
scipy = "^1.5.4"
python-igraph = "^0.8.3"
sklearn = "^0.0"
networkx = "^2.5"
GraphRicciCurvature = "^0.5.2"
grakel = "^0.1.8"
seaborn = "^0.11.1"
torch = "^1.9.0"
torch-scatter = "^2.0.7"
torch-sparse = "^0.6.10"
torch-geometric = "^1.7.2"
pyper = {git = "https://github.com/Pseudomanifold/pyper.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
